# decentralization_V2x_Group_communication

./: CMakeLists.txt  Vehicle.h  main.cpp
